# crucible

./: .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: release.yml  test-fetch-tools.yml
apps/editor-client/: README.md  package.json
apps/vscode-extension/: .vscodeignore  README.md  esbuild.js  package.json
docs/: 2026-07-12-crucible-builds-kafka-findings.md  architecture.md  competitive-analysis.md  handoff-2026-05-16.md  implementation-plan.md  phase1-completion-summary.md  planning_engine_research.md  roadmap.md  task-board.md  tool-loop-guards-analysis.md  tool-loop-scenario-analysis.md  turboquant-qwen36-compat.md  vscode_UI-handling.md
docs/benchmarks/: benchmark-corpus.v1.json  phase1-failure-corpus.v1.json
docs/program/: linear-execution-model.md  notion-structure.md  parity-plus-6-month-plan.md
docs/superpowers/: 2026-06-29-feature-roadmap-copilot-parity.md  2026-06-29-memory-phase2-live-smoke-plan.md  2026-07-02-mcp-settings-ui-research.md  2026-07-08-crucible-rename-rebrand-handoff.md
landing/: README.md  index.html  package-lock.json  package.json
landing/src/: App.tsx  content.ts  index.css  theme.tsx
resources/mcp-servers/: ollama-web-search.py
scripts/: drive_clarify_live.py  e2e-scripted.sh  smoke_clarify_gate.py  start-tqp.sh
scripts/eval/: skill_trigger_eval.py
scripts/release/: build_gopls.py  fetch_jdtls.py  fetch_jre.py  fetch_tools.py  make_manifest.py  test_build_gopls.py  (+4 more)
services/indexer-rs/: Cargo.toml  README.md
services/indexer-rs/src/: config.rs  graph.rs  lsp.rs  main.rs  parser.rs  resolver.rs  service.rs
services/indexer-rs/tests/: cli_tests.rs  graph_tests.rs  parser_tests.rs  resolver_tests.rs  snapshot_tests.rs
(+664 files in other folders)
