[package]
name = "crucible-indexer"
version = "0.1.0"
edition = "2021"
description = "Rust indexing service for Crucible"
license = "MIT"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "fs", "sync"] }
notify = "8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
rustpython-parser = "0.4"
rust-bert = { version = "0.23", optional = true }
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"

[features]
default = []
embeddings = ["dep:rust-bert"]

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3"
